--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,12 @@
-#root {
-  max-width: 1280px;
+@import "variables";
+
+.app {
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  max-width: 70rem;
+  min-width: 28rem;
+  padding: 3.2rem;
+  //padding: 3.2rem 1vw;
+  @media (max-width: $screen-mobile) {
+    padding-inline: 3vw;
+  }
 }
