--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@300;400;500;600;700&display=swap");
+@import "src/variables";
+
 * {
   margin: 0;
   padding: 0;
@@ -5,5 +8,11 @@
 }
 
 html {
+  font-family: "Barlow Semi Condensed", sans-serif;
   font-size: 10px;
+}
+
+body {
+  background: $color-background repeat;
+  min-height: 100vh;
 }
