--- a/src/components/Title.scss
+++ b/src/components/Title.scss
@@ -5,7 +5,7 @@
   //flex-wrap: wrap;
   justify-content: space-between;
   border: 2px solid rgba(255, 255, 255, 0.289199);
-  border-radius: 0.5rem;
+  border-radius: 0.2rem;
   padding: 1.2rem;
   width: 100%;
 
@@ -19,8 +19,8 @@
     max-width: 15rem;
     padding: 1rem 2.4rem;
     flex-direction: column;
-    border-radius: 0.8rem;
-    background-color: white;
+    border-radius: 0.4rem;
+    background-color: rgba(white, 95%);
 
     & span {
       text-transform: uppercase;
