fix: wrong dynamic import url on dist + UI: made coins scalable to parent

--- a/src/components/common/Coin.scss
+++ b/src/components/common/Coin.scss
@@ -1,52 +1,66 @@
 @import "../../variables";
 
+$height: 10;
+
 @mixin circle {
   position: absolute;
   top: 50%;
   left: 50%;
-  height: 10rem;
+  height: #{$height}rem;
   border-radius: 50%;
   aspect-ratio: 1;
 }
 
-.coin {
-  $height: 12.9;
+@mixin adapt-size {
+  height: 40vw;
+  min-height: 12.9rem;
+  max-height: 14.8rem;
+}
+
+.bottom-shadow {
   position: absolute;
-  height: #{$height}rem;
+  //height: #{$height + 2.9}rem;
+  height: 100%;
+  border-radius: 50%;
+  aspect-ratio: 1;
+  transform: translate(0, 5%);
+}
+
+.coin {
+  position: relative;
+  //height: #{$height + 2.9}rem;
+  height: 100%;
   border-radius: 50%;
   aspect-ratio: 0.99;
+  //top: 50%;
+  //left: 50%;
+  //transform: translate(-50%, -50%);
+  z-index: 4;
 
   &::after {
     content: "";
     @include circle;
-    transform: translate(-50%, -54%);
+    height: 78%;
+    transform: translate(-50%, -53%);
     background-color: #babfd4;
     z-index: 1;
   }
 
-  & .bottom-shadow {
-    @include circle;
-    transform: translate(-50%, -43%);
-    height: #{$height}rem;
-    z-index: -2;
-  }
-
   & .circle {
     @include circle;
+    height: 78%;
+    //border-top: 8px solid #babfd4;
     transform: translate(-50%, -47%);
     background-color: rgba(white, 95%);
-    //border-top: 8px solid #babfd4;
     z-index: 2;
 
-    & svg {
+    & img {
       position: absolute;
+      //height: #{$height / 2}rem;
+      height: 65%;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%);
+      translate: -50% -50%;
     }
   }
-
-  //& .inner-circle {
-  //  @include circle;
-  //}
 }
