--- a/src/components/PlayArea.scss
+++ b/src/components/PlayArea.scss
@@ -1,48 +1,49 @@
 @import "../variables";
 
-@mixin fix-offset {
-  transform: translate(-15%, -15%);
-}
-
 .play-area {
-  $icon-offset: 20rem;
   @include flex-center;
   position: relative;
-  margin: 8rem 3rem;
+  margin: 5rem auto;
+  max-width: 45rem;
+  min-width: 25rem;
+  width: 50vw;
+  aspect-ratio: 1;
   //background-image: url("../assets/images/bg-triangle.svg");
-  //background-size: contain;
+  //background-position: center;
+  //background-size: 70%;
   //background-repeat: no-repeat;
 
-  & img {
-    width: 60vw;
-    z-index: -999;
+  & > img {
+    width: 70%;
   }
 
-  & .icons-container {
-    @include fix-offset;
+  & .icon {
+    @include flex-center;
     position: absolute;
-    height: 100%;
+    height: 18vw;
+    min-height: 10rem;
+    max-height: 18rem;
     aspect-ratio: 1;
-
-    & .top-left {
-      @include fix-offset;
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
-
-    & .top-right {
-      @include fix-offset;
-      position: absolute;
-      top: 0;
-      right: 0;
-    }
-
-    & .bottom {
-      @include fix-offset;
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-    }
+    //transform: translateY(-50%);
   }
+
+  & .top-left {
+    top: 0;
+    left: 0;
+  }
+
+  & .top-right {
+    top: 0;
+    right: 0;
+  }
+
+  & .bottom {
+    bottom: 0;
+    translate: 0 -30%;
+  }
+}
+
+.button-rules {
+  @include flex-center;
+  justify-content: flex-end;
 }
