--- a/src/components/Title.scss
+++ b/src/components/Title.scss
@@ -2,8 +2,8 @@
 
 .title {
   @include flex-center;
-  //flex-wrap: wrap;
   justify-content: space-between;
+  margin-bottom: 3rem;
   border: 2px solid rgba(255, 255, 255, 0.289199);
   border-radius: 0.2rem;
   padding: 1.2rem;
@@ -15,8 +15,9 @@
 
   & .score-container {
     @include flex-center;
-    width: 50%;
+    width: 45%;
     max-width: 15rem;
+    max-height: 10rem;
     padding: 1rem 2.4rem;
     flex-direction: column;
     border-radius: 0.4rem;
@@ -31,7 +32,6 @@
     }
 
     & .score {
-      //background-color: red;
       font-size: 6.4rem;
       font-weight: 700;
       color: $color-gray;
