react-redux, react-transition-group, modal animation unmount complete

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -3,6 +3,7 @@ $color-background: radial-gradient(
   #1f3757 0%,
   #131537 100%
 );
+$color-background-white: #eee;
 $color-font-highlight: #2a45c2;
 $color-gray: #565468;
 
