moved modal to app, renamed and rearranged components

--- a/src/components/common/Modal.scss
+++ b/src/components/common/Modal.scss
@@ -20,9 +20,9 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: 40%;
-    width: 10%;
+    width: 8rem;
     aspect-ratio: 1;
-    bottom: 2rem;
+    bottom: 0;
   }
 
   &.enter,
