--- a/src/components/common/Button.scss
+++ b/src/components/common/Button.scss
@@ -1,17 +1,25 @@
-.button {
-  transition: background-color 0.3s ease-in-out;
+.button,
+.button-alt {
+  transition: all 0.3s ease-in-out;
+  transition-property: background-color, color;
   color: white;
-  font-weight: 600;
+  font-size: 1.5rem;
+  font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 2.5px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 0.8rem;
-  padding: 1rem 3.6rem;
+  padding: 1.2rem 4rem;
 
-  &:hover {
+  &:hover,
+  &-alt {
     cursor: pointer;
     color: black;
     background-color: white;
+  }
+
+  &-alt:hover {
+    color: red;
   }
 }
