--- a/src/components/common/Modal.scss
+++ b/src/components/common/Modal.scss
@@ -1,8 +1,7 @@
 @import "../../variables";
 
 .modal {
-  @include flex-center;
-  transition: transform 0.5s ease-in-out;
+  transition: transform 0.3s ease-in-out;
   position: fixed;
   top: 0;
   left: 0;
@@ -22,7 +21,9 @@
     background-size: 40%;
     width: 8rem;
     aspect-ratio: 1;
+    left: 50%;
     bottom: 0;
+    transform: translateX(-50%);
   }
 
   &.enter,
