--- a/src/index.scss
+++ b/src/index.scss
@@ -10,9 +10,23 @@
 html {
   font-family: "Barlow Semi Condensed", sans-serif;
   font-size: 10px;
+  min-height: 100vh;
 }
 
 body {
+  margin-inline: auto;
+  position: relative;
   background: $color-background repeat;
-  min-height: 100vh;
+  max-width: 120rem;
+  padding-bottom: 6rem;
+}
+
+.hidden {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.show {
+  visibility: visible;
+  opacity: 1;
 }
