--- a/src/components/Title.scss
+++ b/src/components/Title.scss
@@ -10,12 +10,12 @@
   width: 100%;
 
   & img {
-    max-width: 45%;
+    max-width: 35%;
   }
 
   & .score-container {
     @include flex-center;
-    width: 45%;
+    width: 65%;
     max-width: 15rem;
     max-height: 10rem;
     padding: 1rem 2.4rem;
@@ -32,9 +32,14 @@
     }
 
     & .score {
-      font-size: 6.4rem;
+      @include flex-center;
+      font-size: 4.5rem;
       font-weight: 700;
       color: $color-gray;
+
+      & > .house-score {
+        color: rgba($color-gray, 0.8);
+      }
     }
   }
 }
