--- a/src/components/common/Coin.scss
+++ b/src/components/common/Coin.scss
@@ -1,33 +1,28 @@
 @import "../../variables";
 
-$height: 10;
+$ratio: 1.05;
 
 @mixin circle {
   position: absolute;
   top: 50%;
   left: 50%;
-  height: #{$height}rem;
   border-radius: 50%;
-  aspect-ratio: 1;
+  aspect-ratio: $ratio;
 }
 
 .bottom-shadow {
+  aspect-ratio: $ratio;
   position: absolute;
   height: 100%;
   border-radius: 50%;
-  aspect-ratio: 1;
   transform: translate(0, 5%);
 }
 
 .coin {
   position: relative;
-  //height: #{$height + 2.9}rem;
   height: 100%;
   border-radius: 50%;
-  aspect-ratio: 0.99;
-  //top: 50%;
-  //left: 50%;
-  //transform: translate(-50%, -50%);
+  aspect-ratio: $ratio;
   z-index: 4;
 
   &::after {
@@ -49,7 +44,6 @@ $height: 10;
 
     & img {
       position: absolute;
-      //height: #{$height / 2}rem;
       height: 55%;
       top: 50%;
       left: 50%;
