--- a/src/components/common/Modal.scss
+++ b/src/components/common/Modal.scss
@@ -63,6 +63,7 @@
   position: fixed;
   opacity: 0;
   background-color: rgba(0, 0, 0, 0.3);
+  left: 0;
   height: 100vh;
   width: 100vw;
   z-index: 98;
